# messaging_app

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/migrations/2023-05-05-234538_init_db/: down.sql  up.sql
backend/migrations/2023-05-15-134433_e2ee/: down.sql  up.sql
backend/migrations/2023-05-22-112532_file_sharing/: up.sql
backend/src/: auth_endpoints.rs  encryption.rs  grimoire.rs  index.html  keys.rs  main.rs  models.rs  schema.rs  user_endpoints.rs  utils.rs
backend/src/endpoints/: auth.rs  auth_endpoints.rs  chats.rs  chats_endpoints.rs  files.rs  invites.rs  invites_endpoints.rs  messages.rs  messages_endpoints.rs  mod.rs  user.rs  user_endpoints.rs
common_lib/: Cargo.toml
common_lib/src/: encryption.rs  grimoire.rs  lib.rs
common_structs/: Cargo.toml
common_structs/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: grimoire.rs  login.rs  main.rs  main_window.rs  messaging.rs  regex.rs  signup.rs  time_utils.rs  window_structs.rs
frontend/src/requests/: auth.rs  chats.rs  files.rs  invites.rs  messaging.rs  mod.rs
