[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version = "4.3.1", features = ["openssl"]}
argon2 = "0.5.0"
chrono = "0.4.24"
diesel = {version = "2.0.4",features= ["mysql"]}
dotenvy = "0.15.7"
openssl = "0.10.52"
serde = "1.0.162"
serde_derive = "1.0.162"
