[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = {version = "4.3.1"}
argon2 = "0.5.0"
base64 = "0.21.0"
chrono = "0.4.24"
common_lib = { version = "0.1.0", path = "../common_lib" }
diesel = {version = "2.0.4",features= ["chrono","mysql","r2d2"]}
dotenvy = "0.15.7"
env_logger = "0.10.0"
password-hash = "0.5.0"
rand = "0.8.5"
serde = "1.0.162"
serde_derive = "1.0.162"
