[package]
name = "backend"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-multipart = "0.6.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = {version = "4.3.1"}
argon2 = "0.5.0"
base64 = "0.21.0"
chrono = "0.4.24"
common_lib = { version = "0.1.0", path = "../common_lib" }
dialoguer = "0.10.4"
diesel = {version = "2.0.4",features= ["chrono","mysql","r2d2"]}
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
once_cell = "1.17.1"
password-hash = "0.5.0"
rand = "0.8.5"
rsa = "0.9.2"
serde = "1.0.162"
serde_derive = "1.0.162"
serde_json = "1.0.96"
tempfile = "3.5.0"
