[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
iced = "0.9.0"
reqwest = { version = "0.11.17", features = ["blocking", "json", "cookies"] }
common_structs = { version = "0.1.0", path = "../common_structs" }
once_cell = "1.17.1"
serde_json = "1.0.96"
lazy_static = "1.4.0"
reqwest_cookie_store = "0.5.0"
directories = "5.0.1"
cookie = "0.17.0"
