[package]
name = "frontend"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
iced = { version = "0.9.0", features = ["tokio"] }
reqwest = { version = "0.11.17", features = ["blocking", "json", "cookies"] }
common_lib = { version = "0.1.0", path = "../common_lib" }
once_cell = "1.17.1"
serde_json = "1.0.96"
lazy_static = "1.4.0"
reqwest_cookie_store = "0.5.0"
directories = "5.0.1"
cookie = "0.17.0"
regex = "1.8.1"
iced_aw = { version = "0.5.2", features = ["modal", "card"] }
rsa = "0.9.2"
rand = "0.8.5"
